<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register.LoginActivity">
    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/water" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="@+id/gifImageView"
        app:layout_constraintStart_toStartOf="@+id/gifImageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/background_color"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="@+id/loadingProgress"
                app:layout_constraintStart_toStartOf="parent">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.1">

                    <LinearLayout
                        android:id="@+id/login_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/appName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/sign_up"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            android:textStyle="bold" />


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorTextAppearance="@color/colorPrimary">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/register_email"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:paddingBottom="20dp"
                                android:textColor="@color/black"
                                android:textSize="16sp" />
                        </android.support.design.widget.TextInputLayout>


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:passwordToggleEnabled="true">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/register_password"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:hint="@string/passowrd"
                                android:inputType="textPassword"
                                android:paddingBottom="20dp"
                                android:singleLine="true"
                                android:textColor="@color/black"
                                android:textSize="16sp" />
                        </android.support.design.widget.TextInputLayout>


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:passwordToggleEnabled="true">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/register_confirm_password"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:hint="@string/confirm_password"
                                android:inputType="textPassword"
                                android:paddingBottom="20dp"
                                android:singleLine="true"
                                android:textColor="@color/black"
                                android:textSize="16sp" />
                        </android.support.design.widget.TextInputLayout>


                        <Button
                            android:id="@+id/loginBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/corner_button_red"
                            android:text="@string/register"
                            android:textColor="@color/background_color"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"

                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginEnd="5dp"
                                android:layout_marginRight="5dp"
                                android:text="@string/oldUser1"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/signUp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:onClick="openLogin"
                                android:text="@string/oldUser2"
                                android:textColor="@color/colorAccent"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>


                    </LinearLayout>
                </RelativeLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/login_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingEnd="40dp"
                    android:paddingStart="40dp"
                    android:paddingTop="10dp">


                    <Button
                        android:id="@+id/g_plus"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/corner_button_red"
                        android:drawablePadding="25dp"
                        android:drawableStart="@drawable/ic_g_plus_icon"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/phone"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/corner_button_green"
                        android:drawablePadding="25dp"
                        android:drawableStart="@drawable/fui_ic_phone_white_24dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="By using the app. you agree to the Terms and Privacy Policies.."
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/loadingProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="360dp"
        tools:ignore="MissingConstraints">

        <com.tuyenmonkey.mkloader.MKLoader
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:mk_color="@color/colorAccent"
            app:mk_type="Sharingan" />
        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
